PowerMock requires some openess